--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
       <h1>島根県1352<br> 遊漁船ファミリア</h1>
       <p>　　　　</p>
       <a href="https://www.instagram.com/familiar_matsue/" target="_blank" rel="noopener noreferrer">
-        <i class="fa-brands fa-instagram fa-2x"></i>
+        <i class="fa-brands fa-instagram fa-2x insta" style="color:rgb(236, 13, 61);"></i>
       </a>
       <p>&nbsp;</p>
       <a href="https://lin.ee/fipwyGn" target="_blank" rel="noopener noreferrer">
-        <i class="fa-brands fa-line fa-2x"></i>
+        <i class="fa-brands fa-line fa-2x line" style="color:green;"></i>
       </a>
     </div>
 
@@ -118,8 +118,8 @@
   </section>
 
   <section id="greeting">
-    <img src="./images/background/familiar_string.jpg">
-    <p>ホームページへようこそ。元学校の先生が優しく楽しく釣り場をご案内します。<br>ご予約は以下のLINEまでお願いします！</p>
+    <img src="./images/background/familiar_string.jpg" id="title">
+    <p>ホームページへようこそ<br>元学校の先生が優しく釣り場をご案内します<br>ご予約は以下のLINEまでお願いします</p>
     <br>
     <a href="https://lin.ee/fipwyGn">
       <img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" width="121.2" height="38">
