--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 
 <body>
-  <header>
+  <header id="top">
     <div class="logo">
       <img src="./images/famipaka.jpg" id="icon">
       <h1>島根県1352<br> 遊漁船ファミリア</h1>
@@ -100,7 +100,7 @@
 
     <nav id="nav-menu" class="nav" aria-hidden="true">
       <ul class="nav__list">
-        <li class="nav__item"><a href="#greeting" class="nav__link">挨拶</a></li>
+        <li class="nav__item"><a href="#top" class="nav__link">トップ</a></li>
         <li class="nav__item"><a href="#schedule" class="nav__link">出船スケジュール</a></li>
         <li class="nav__item"><a href="#pricing" class="nav__link">乗船料金</a></li>
         <li class="nav__item"><a href="#boat" class="nav__link">船の紹介</a></li>
