ios用のファビコンを追加

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SLJ・LJの山陰遊漁船ファミリア</title>
   <link rel="icon" href="./images/favicon.ico" sizes="32x32">
+  <link rel="apple-touch-icon" sizes="180x180" href=".images/famipaka.jpg">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <link href=”https://use.fontawesome.com/releases/v6.0.0/css/all.css” rel=”stylesheet”>
