テーブルヘッダーを修正

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <table>
       <thead>
         <tr>
-          <th>料金プラン</th>
+          <th>プラン</th>
           <th>料金</th>
         </tr>
       </thead>
