--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
   <section id="schedule">
     <h2>出船スケジュール</h2>
     <div class="iframe-container">
-      <iframe src="https://calendar.google.com/calendar/embed?src=familiar.slj%40gmail.com&ctz=Asia%2FTokyo"></iframe>
+      <iframe id='iframe' frameborder='no' scrolling='yes' loading='lazy' allowfullscreen
+        src='https://tsurimaru-calendar-captain.web.app/16682/?scrolling=yes'
+        style='min-height:700px;width:100%;'></iframe>
     </div>
     <p>※予定が空の日付は定休日です。</p>
     <p>※平日釣行は事前にご相談ください。</p>
