釣り丸カレンダーの高さ修正

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
 
   <section id="greeting">
     <img src="./images/background/familiar_string.jpg" id="title">
-    <p>元学校の先生が優しくご案内！<br>ご予約は以下のLINEまでお願いします</p>
+    <p>元学校の先生が優しくご案内！<br>ご予約は以下のLINEまでお願いします<br>釣果情報は<a href="https://www.instagram.com/familiar_matsue/"
+        style="text-decoration: none;">Instagram</a>へ！</p>
     <br>
     <a href="https://lin.ee/fipwyGn">
       <img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" width="121.2" height="38">
