--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <img src="./images/my_icon.jpg">
     <p style="text-align: center;">加納　寛之</p>
     <div
-      style="width: 0px; height: 0px; border-style: solid; border-width: 15px ; border-color:  transparent transparent #3d6df3; transparent ; margin-left: 80px; margin-top: -20px;">
+      style="width: 0px; height: 0px; border-style: solid; border-width: 15px ; border-color:  transparent transparent #3d6df3; margin-left: 80px; margin-top: -20px;">
     </div>
     <div
       style="border-radius:10px; background: #3d6df3; margin-bottom: 0px; font-size: 100%; padding: 20px; color: white;">
@@ -249,14 +249,14 @@
     <h2>安全情報</h2>
     <div class="slideshow-container">
       <button id="prevBtn" class="prev">&#10094;</button>
-      <img class="slides active" src="./images/safety_info/tourokuhyou_20241101.png" alt="遊漁船業者登録票">
-      <img class="slides" src="./images/safety_info/hyou4.jpg" alt="業務規定別表4">
+      <img class="slides active" src="./images/safety_info/hyou4.jpg" alt="業務規定別表4">
       <img class="slides" src="./images/safety_info/hyou6.jpg" alt="業務規定別表6">
       <img class="slides" src="./images/safety_info/hyou7.jpg" alt="業務規定別表7">
       <img class="slides" src="./images/safety_info/hyou8.jpg" alt="業務規定別表8">
       <img class="slides" src="./images/safety_info/hyou10.jpg" alt="業務規定別表10">
       <img class="slides" src="./images/safety_info/hyou11.jpg" alt="業務規定別表11">
       <img class="slides" src="./images/safety_info/hyou12_20241101.jpg" alt="業務規定別表12">
+      <img class="slides" src="./images/safety_info/tourokuhyou_20241101.png" alt="遊漁船業者登録票">
       <button id="nextBtn" class="next">&#10095;</button>
     </div>
   </section>
