乗船手順を一部修正

--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@
     <h3>乗船手順</h3>
     <ol>
       <li>マリーナ内の①②にお車を止めてください</li>
-      <li>赤で示す<span style="color: red;">サービス桟橋</span>に荷物を下ろし、お車を③④⑤にご移動ください</li>
-      <li>トイレを済ませて<span style="color: red;">サービス桟橋</span>でお待ちください</li>
+      <li>赤で示す<span style="color: red;">桟橋</span>に荷物を下ろし、お車を③④⑤にご移動ください</li>
+      <li>トイレを済ませて<span style="color: red;">桟橋</span>でお待ちください</li>
       <li>乗船名簿へ必要事項をご入力ください</li>
-      <li>集合時間を目安に<span style="color: red;">サービス桟橋</span>に船を付けます</li>
+      <li>集合時間を目安に<span style="color: red;">桟橋</span>に船を付けます</li>
       <li>釣り座を決めて荷物を積み込み出船します</li>
     </ol>
     <br>
