業務規定更新と乗船案内更新

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <li>釣り座を決めて荷物を積み込み出船します</li>
     </ol>
     <br>
-    <img src="./images/jousenn.jpg" style="border: solid">
+    <img src="./images/jousenn.jpg">
 
     <section id="register">
       <div style="text-align: center;">
@@ -263,11 +263,12 @@
       </svg>
       <img class="slides active" src="./images/safety_info/hyou4.jpg" alt="業務規定別表4">
       <img class="slides" src="./images/safety_info/hyou6.jpg" alt="業務規定別表6">
+      <img class="slides" src="./images/safety_info/hyou6-1.jpg" alt="業務規定別表6別添">
       <img class="slides" src="./images/safety_info/hyou7.jpg" alt="業務規定別表7">
       <img class="slides" src="./images/safety_info/hyou8.jpg" alt="業務規定別表8">
       <img class="slides" src="./images/safety_info/hyou10.jpg" alt="業務規定別表10">
       <img class="slides" src="./images/safety_info/hyou11.jpg" alt="業務規定別表11">
-      <img class="slides" src="./images/safety_info/hyou12_20241101.jpg" alt="業務規定別表12">
+      <img class="slides" src="./images/safety_info/hyou12.jpg" alt="業務規定別表12">
       <img class="slides" src="./images/safety_info/tourokuhyou_20241101.png" alt="遊漁船業者登録票">
       <svg id="nextBtn" class="next" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
         width="24px" fill="white">
