安全情報に枠を追加

--- a/index.html
+++ b/index.html
@@ -261,15 +261,15 @@
         width="24px" fill="white">
         <path d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z" />
       </svg>
-      <img class="slides active" src="./images/safety_info/hyou4.jpg" alt="業務規定別表4">
-      <img class="slides" src="./images/safety_info/hyou6.jpg" alt="業務規定別表6">
-      <img class="slides" src="./images/safety_info/hyou6-1.jpg" alt="業務規定別表6別添">
-      <img class="slides" src="./images/safety_info/hyou7.jpg" alt="業務規定別表7">
-      <img class="slides" src="./images/safety_info/hyou8.jpg" alt="業務規定別表8">
-      <img class="slides" src="./images/safety_info/hyou10.jpg" alt="業務規定別表10">
-      <img class="slides" src="./images/safety_info/hyou11.jpg" alt="業務規定別表11">
-      <img class="slides" src="./images/safety_info/hyou12.jpg" alt="業務規定別表12">
-      <img class="slides" src="./images/safety_info/tourokuhyou_20241101.png" alt="遊漁船業者登録票">
+      <img class="slides active" src="./images/safety_info/hyou4.jpg" alt="業務規定別表4" style="border: solid">
+      <img class="slides" src="./images/safety_info/hyou6.jpg" alt="業務規定別表6" style="border: solid">
+      <img class="slides" src="./images/safety_info/hyou6-1.jpg" alt="業務規定別表6別添" style="border: solid">
+      <img class="slides" src="./images/safety_info/hyou7.jpg" alt="業務規定別表7" style="border: solid">
+      <img class="slides" src="./images/safety_info/hyou8.jpg" alt="業務規定別表8" style="border: solid">
+      <img class="slides" src="./images/safety_info/hyou10.jpg" alt="業務規定別表10" style="border: solid">
+      <img class="slides" src="./images/safety_info/hyou11.jpg" alt="業務規定別表11" style="border: solid">
+      <img class="slides" src="./images/safety_info/hyou12.jpg" alt="業務規定別表12" style="border: solid">
+      <img class="slides" src="./images/safety_info/tourokuhyou_20241101.png" alt="遊漁船業者登録票" style="border: solid">
       <svg id="nextBtn" class="next" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
         width="24px" fill="white">
         <path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z" />
