船長名を修正

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <section id="captain">
       <h2>船長の紹介</h2>
       <img src="./images/my_icon.jpg" />
-      <p style="text-align: center">加納　寛之</p>
+      <p style="text-align: center">SLJ・LJ山陰遊漁船ファミリア　加納寛之</p>
       <div
         style="
           width: 0px;
