--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="d1xvAvQLzMqFZ9d88SRrVV9h6OeIDTIk2I6NatoKsMs"
     />
     <title>SLJ・LJの山陰遊漁船ファミリア</title>
-    <link rel="icon" href="./images/favicon.ico" sizes="32x32" />
+    <link rel="apple-touch-icon" href="./images/famipaka.jpg" />
     <link rel="apple-touch-icon" sizes="180x180" href=".images/famipaka.jpg" />
     <link rel="stylesheet" href="styles.css" />
     <link href=”https://use.fontawesome.com/releases/v6.0.0/css/all.css”
