営業所の住所を非表示

--- a/index.html
+++ b/index.html
@@ -437,6 +437,9 @@
           <path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z" />
         </svg>
       </div>
+      <p>
+        ※営業所は自宅兼用のため表示を控えております。船には掲示があります。営業所の住所については開示を求められれば利用目的を確認の上開示します。
+      </p>
     </section>
 
     <section id="weather">
