軽微な文言修正

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
         </svg>
       </div>
       <p>
-        ※営業所は自宅兼用のため表示を控えております。船には掲示があります。営業所の住所については開示を求められれば利用目的を確認の上開示します。
+        ※営業所は自宅兼用のため住所の表示を控えております。船には掲示があります。営業所の住所については開示を求められれば利用目的を確認の上開示します。
       </p>
     </section>
 
