お知らせセクションの追加と共通部分の整理
- お知らせセクションを追加（最大3件表示、スクロール対応）
- お知らせ詳細ページを作成（news/2026/20260101.html）
- 共通部分（ヘッダー・フッター）をcommonディレクトリに整理
- JavaScriptで共通部分を動的読み込み
- ハンバーガーメニューの初期化をload-common.jsに統合
- お知らせリストのスタイルを調整（コンパクト化）

--- a/index.html
+++ b/index.html
@@ -30,82 +30,11 @@
       src="https://kit.fontawesome.com/e172613f19.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/javascript/main.js"></script>
+    <script src="./assets/javascript/load-common.js"></script>
   </head>
 
   <body class="kiwi-maru-regular">
-    <header id="top">
-      <div class="logo">
-        <img src="./images/famipaka.jpg" id="icon" />
-        <h1>
-          島根県1352<br />
-          遊漁船ファミリア
-        </h1>
-        <p>　　　　</p>
-        <a
-          href="https://www.instagram.com/familiar_matsue/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i
-            class="fa-brands fa-instagram fa-2x insta"
-            style="color: rgb(236, 13, 61)"
-          ></i>
-        </a>
-        <p>&nbsp;</p>
-        <a
-          href="https://lin.ee/fipwyGn"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="fa-brands fa-line fa-2x line" style="color: green"></i>
-        </a>
-      </div>
-
-      <button
-        class="hamburger"
-        aria-label="メニュー"
-        aria-controls="nav-menu"
-        aria-expanded="false"
-      >
-        <span class="hamburger__line"></span>
-        <span class="hamburger__line"></span>
-        <span class="hamburger__line"></span>
-      </button>
-
-      <nav id="nav-menu" class="nav" aria-hidden="true">
-        <ul class="nav__list">
-          <li class="nav__item"><a href="#top" class="nav__link">トップ</a></li>
-          <li class="nav__item">
-            <a href="#schedule" class="nav__link">出船スケジュール</a>
-          </li>
-          <li class="nav__item">
-            <a href="#pricing" class="nav__link">乗船料金</a>
-          </li>
-          <li class="nav__item">
-            <a href="#boat" class="nav__link">船の紹介</a>
-          </li>
-          <li class="nav__item">
-            <a href="#captain" class="nav__link">船長の紹介</a>
-          </li>
-          <li class="nav__item">
-            <a href="#boarding" class="nav__link">乗船案内</a>
-          </li>
-          <li class="nav__item">
-            <a href="#register" class="nav__link">乗船名簿</a>
-          </li>
-          <li class="nav__item">
-            <a href="#safety" class="nav__link">安全情報</a>
-          </li>
-          <li class="nav__item">
-            <a href="#weather" class="nav__link">天気</a>
-          </li>
-          <li class="nav__item">
-            <a href="#links" class="nav__link">リンク</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <header id="top"></header>
 
     <section id="hero">
       <div class="hero-content"></div>
@@ -129,6 +58,20 @@
           height="38"
         />
       </a>
+    </section>
+
+    <section id="news">
+      <h2>お知らせ</h2>
+      <div class="news-list-container">
+        <ul>
+          <li>
+            <span>2026年1月1日</span>
+            <a href="./news/2026/20260101.html">
+              新年のご挨拶と営業開始のお知らせ
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section id="schedule">
@@ -412,8 +355,6 @@
       </ul>
     </section>
 
-    <footer>
-      <p>&copy; 2025 島根県1352 遊漁船ファミリア. All Rights Reserved.</p>
-    </footer>
+    <footer></footer>
   </body>
 </html>
