--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
       <div class="news-list-container">
         <ul>
           <li>
+            <span>2026年6月1日</span>
+            <a href="./news/2026/20260601.html"> 夏の白いか予約受付開始 </a>
+          </li>
+          <li>
             <span>2026年1月1日</span>
-            <a href="./news/2026/20260101.html">
-              新年のご挨拶と営業開始のお知らせ
-            </a>
+            <a href="./news/2026/20260101.html"> 新年のご挨拶と営業開始 </a>
           </li>
         </ul>
       </div>
