fix: 年間早見表をコメントアウト

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           </tr>
         </tbody>
       </table>
-      <img src="./images/schedule.png" alt="ご案内プラン" />
+      <!-- <img src="./images/schedule.png" alt="ご案内プラン" /> -->
       <p>※その他メニューもご相談により受け付けます。</p>
       <p>※お支払は現金のみ</p>
     </section>
